--- a/drools-spring/frontend/frontend/src/pages/add-habitat-page/style.css
+++ b/drools-spring/frontend/frontend/src/pages/add-habitat-page/style.css
@@ -16,21 +16,22 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
 }
 
-.arrow-next {
-    position: absolute;
-    top: 0px;
-    left: 400px;
-    transform: translate(-50%, -50%);
+.round-bttn-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 5px;
 }
 
-.arrow-back {
-    position: absolute;
-    top: 0px;
-    right: 350px;
-    transform: translate(-50%, -50%);
+.round-bttn {
+    padding: 10px;
 }
+
+
+
 
 
 
