--- a/drools-spring/frontend/frontend/src/components/style.css
+++ b/drools-spring/frontend/frontend/src/components/style.css
@@ -1,9 +1,7 @@
 .form {
     display: flex;
     flex-direction: column;
-    /* gap: 10px; */
     align-items: center;
-    /* padding-top: 80px; */
 }
 
 div.form-element {
@@ -24,7 +22,6 @@ div.form-element {
 div.antropological-form-element {
     margin-top: 20px;
     align-items: center;
-    width: 98%;
-    /* padding-left: 5px; */
+    width: 26vw;
 
 }
