--- a/drools-spring/frontend/frontend/src/habitat-info-components/style.css
+++ b/drools-spring/frontend/frontend/src/habitat-info-components/style.css
@@ -13,9 +13,9 @@
     flex-direction: column;
 }
 
-/* .label-container {
-    background-color: lightgoldenrodyellow;
-} */
+.label-container {
+    padding: 20px;
+}
 
 #nf {
     height: 20%;
@@ -33,6 +33,7 @@ p#factor-value {
 }
 
 .gif {
-    height: 500px;
-    width: 500px;
+    margin-top: 70px;
+    /* height: 500px;
+    width: 500px; */
 }
