--- a/drools-spring/frontend/frontend/src/pages/dashboard-page/style.css
+++ b/drools-spring/frontend/frontend/src/pages/dashboard-page/style.css
@@ -1,5 +1,6 @@
 .dashboard-container {
-    width: 100vw;
+    max-width: 100vw;
+    max-height: 100vh;
     height: 100vh;
     background-color: #D4EFDF;
     color: #6C1E15;
@@ -19,11 +20,13 @@
     height: 50px;
 }
 
+
 .dashboard-title {
     padding: 30px;
     font-size: 50px;
     border-bottom: #6C1E15 2px solid;
     max-height: 50px;
+
 }
 
 .log-out-div {
@@ -35,16 +38,15 @@
 .content-div {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr;
-    height: 85vh;
 }
 
 .habitat-list-div {
-    /* background-color: pink; */
     border-right: #6C1E15 2px solid;
     display: flex;
     flex-direction: column;
     padding: 50px;
+    height: 95% !important;
+
 }
 
 .selected-habitat-div {
