--- a/drools-spring/frontend/frontend/src/pages/dashboard-page/style.css
+++ b/drools-spring/frontend/frontend/src/pages/dashboard-page/style.css
@@ -45,11 +45,87 @@
     display: flex;
     flex-direction: column;
     padding: 50px;
-    height: 95% !important;
+    height: 75vh;
+}
 
+.habitat-list-div-scrollable{
+    border-right: #6C1E15 2px solid;
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    height: 75vh;
+    overflow-y: scroll;
 }
 
 .selected-habitat-div {
-    padding: 40px;
+    padding: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr;
+
 }
 
+.tab-bttns-div {
+    height: 7%;
+    /* padding: 10px; */
+    display: flex;
+    flex-direction: row;
+    /* background-color: pink; */
+    border-bottom: #6C1E15 solid 1px;
+    gap: 10px;
+}
+
+
+.selected-tab-div {
+    /* background-color: lightblue; */
+    height: 93%;
+    padding: 50px;
+}
+
+.factors-tab-container {
+    /* height: 69vh; */
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+.ant-factors-tab-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+}
+
+.natural-factors-container {
+    border-right:  #6C1E15 1px solid;
+    border-top:  #6C1E15 1px solid;
+    border-left:  #6C1E15 1px solid;
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+}
+
+.label-container {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+#nf {
+    padding-left: 10px;
+    text-align: start;
+    border-bottom: #6C1E15 1px solid;
+    max-height: 100px;
+}
+
+p {
+    margin-top: 0;
+}
+
+b#factor {
+    font-size: 10px;
+}
+
+p#factor-value {
+    font-size: 10px;
+}
+
+h1 {
+    margin-top: 0;
+}
