--- a/drools-spring/frontend/frontend/src/pages/add-habitat-page/style.css
+++ b/drools-spring/frontend/frontend/src/pages/add-habitat-page/style.css
@@ -34,7 +34,17 @@
     margin-bottom: 0;
     font-weight: normal;
 }
+.back-bttn {
+    position: absolute;
+    top: 70%;
+    left: 3%;
+}
 
+.header-add-af {
+    display: grid;
+    grid-template-rows: 1fr 15fr;
+
+}
 
 
 
