--- a/drools-spring/frontend/frontend/src/habitat-info-components/style.css
+++ b/drools-spring/frontend/frontend/src/habitat-info-components/style.css
@@ -52,7 +52,12 @@ h1 {
 
 .succes-label {
     font-size: 120%;
-    padding-top: 2%;
+    padding-top: 3%;
     padding-left: 20%;
     padding-right: 20%;
+}
+
+.recommendations-div {
+    padding-left: 15%;
+    padding-right: 15%;
 }
