--- a/drools-spring/frontend/frontend/src/components/header-component/style.css
+++ b/drools-spring/frontend/frontend/src/components/header-component/style.css
@@ -5,20 +5,21 @@
 
 .logo {
     position: absolute;
-    top: 5px;
-    left: 30px;
+    top: 0px;
+    left: 15px;
     font-size: 20px;
     display: flex;
     flex-direction: row;
 }
 
 .logo-image {
-    height: 50px;
+    height: 70px;
+    /* border: black 2px solid; */
 }
 
 .logo-title {
     vertical-align: bottom;
-    padding-top: 10px;
+    padding-top: 20px;
 }
 
 .dashboard-title {
@@ -28,6 +29,6 @@
 
 .log-out-div {
     position: absolute;
-    top: 10px;
+    top: 20px;
     right: 30px;
 }
